--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "bcrypt": "^1.0.1",
     "body-parser": "^1.15.2",
+    "client-sessions": "^0.7.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-messages": "^1.0.1",
