--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.14.2",
     "express-validator": "^3.1.1",
     "md5": "^2.2.1",
+    "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
